--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -90,15 +90,21 @@
         <scene sceneID="11V-IT-lPm">
             <objects>
                 <viewController id="51M-R7-mzE" customClass="MapViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
-                    <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="fMo-90-i8t">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </mapView>
                     <tabBarItem key="tabBarItem" title="Map" image="MapIcon" id="Iki-VZ-gQH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="50D-aw-UwQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1565" y="248"/>
+            <point key="canvasLocation" x="1993" y="-56"/>
+        </scene>
+        <!--Web Browser-->
+        <scene sceneID="WNs-ze-oiW">
+            <objects>
+                <viewController id="8i6-3F-JkJ" customClass="WebViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Web Browser" id="FYx-wk-DI8"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QYK-Cb-wXI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1993" y="660"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="FKr-cS-HW2">
@@ -112,11 +118,12 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="hlK-zA-Wht"/>
                         <segue destination="51M-R7-mzE" kind="relationship" relationship="viewControllers" id="z2j-bd-N97"/>
+                        <segue destination="8i6-3F-JkJ" kind="relationship" relationship="viewControllers" id="dek-WR-pRf"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BJV-xv-ltN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="753" y="248"/>
+            <point key="canvasLocation" x="1181" y="-56"/>
         </scene>
     </scenes>
     <resources>
