--- a/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -13,9 +13,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="kbS-kM-oLG">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iXv-3X-TLe">
+                                    <rect key="frame" x="304" y="15" width="288" height="30"/>
+                                    <state key="normal" title="Add"/>
+                                    <connections>
+                                        <action selector="addNewItem:" destination="Bdx-oa-VlG" eventType="touchUpInside" id="Up4-XY-adb"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0IN-ln-djQ">
+                                    <rect key="frame" x="8" y="15" width="288" height="30"/>
+                                    <state key="normal" title="Edit"/>
+                                    <connections>
+                                        <action selector="toggleEditingMode:" destination="Bdx-oa-VlG" eventType="touchUpInside" id="gpc-81-2kh"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="iXv-3X-TLe" firstAttribute="leading" secondItem="0IN-ln-djQ" secondAttribute="trailing" constant="8" id="7CM-kA-Mfc"/>
+                                <constraint firstItem="iXv-3X-TLe" firstAttribute="width" secondItem="0IN-ln-djQ" secondAttribute="width" id="TV8-Uz-pCL"/>
+                                <constraint firstItem="iXv-3X-TLe" firstAttribute="centerY" secondItem="kbS-kM-oLG" secondAttribute="centerY" id="cpI-jv-cg0"/>
+                                <constraint firstItem="0IN-ln-djQ" firstAttribute="leading" secondItem="kbS-kM-oLG" secondAttribute="leading" constant="8" id="loh-JX-YuE"/>
+                                <constraint firstAttribute="trailing" secondItem="iXv-3X-TLe" secondAttribute="trailing" constant="8" id="mFx-p3-fDG"/>
+                                <constraint firstItem="0IN-ln-djQ" firstAttribute="centerY" secondItem="kbS-kM-oLG" secondAttribute="centerY" id="sqj-No-430"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="Pz7-JN-RZp" detailTextLabel="l1l-ZH-SXj" style="IBUITableViewCellStyleValue1" id="tgl-yu-bS7">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="88" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tgl-yu-bS7" id="YxE-zS-hfU">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
@@ -46,8 +75,9 @@
                     </tableView>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P3J-L0-Wm6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <barButtonItem title="Item" id="ZtN-BX-mpR"/>
             </objects>
-            <point key="canvasLocation" x="-150" y="-946"/>
+            <point key="canvasLocation" x="-150" y="-950"/>
         </scene>
     </scenes>
 </document>
